# tree-sitter-pact

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  go.sum  grammar.js  languages.toml  package-lock.json  package.json  parse-all.sh  parser.js  playground.pact  pnpm-lock.yaml  pyproject.toml  setup.py  test-all.sh  test.pact  test.repl  test.ts  tree-sitter-pact.wasm  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-pact.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pact/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPact/: pact.h
bindings/swift/TreeSitterPactTests/: TreeSitterPactTests.swift
examples/: playground.pact  test.pact  test.repl
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  test.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: bless.pact  bless.txt  defcap.pact  defcap.txt  definitions.txt  expressions.txt  let.txt  misc.txt  model-defproperty.pact  model-defproperty.txt  modules.pact  modules.txt  multi-line-string.pact  multi-line-string.txt  multiple-meta.pact
