[package]
name = "tree-sitter-pact"
description = "pact grammar for the tree-sitter parsing library"
version = "0.0.10"
keywords = ["incremental", "parsing", "pact"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-pact"
edition = "2018"
license = "MIT"
authors = ["Salama Ashoush <salamashoush@gmail.com>"]
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.2.26"

[dev-dependencies]
tree-sitter = "0.25.6"
