[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-pact"
description = "Pact grammar for tree-sitter"
version = "0.0.10"
keywords = ["incremental", "parsing", "tree-sitter", "pact"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"
authors = [{ name = "Salama Ashoush", email = "salamaashoush@gmail.com" }]

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-pact"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

[tool.poetry]
packages = [{ include = "tree_sitter_pact", from = "bindings/python" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
